deploy: 2e49e3ac2f65f310a51c0885c99b9bc304401b88

--- a/cpp_api/apyfixed.html
+++ b/cpp_api/apyfixed.html
@@ -6,10 +6,10 @@
 <link rel="index" title="Index" href="../genindex.html"><link rel="search" title="Search" href="../search.html"><link rel="next" title="APyFixedArray" href="apyfixedarray.html"><link rel="prev" title="apycfixed_util.h" href="apycfixed_util.html">
         <link rel="prefetch" href="../_static/apytypeslogo.svg" as="image">
 
-    <link rel="shortcut icon" href="../_static/apytypes.ico"><!-- Generated with Sphinx 8.2.3 and Furo 2025.09.25 -->
+    <link rel="shortcut icon" href="../_static/apytypes.ico"><!-- Generated with Sphinx 9.0.4 and Furo 2025.12.19 -->
         <title>APyFixed - APyTypes documentation</title>
       <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=d111a655" />
-    <link rel="stylesheet" type="text/css" href="../_static/styles/furo.css?v=580074bf" />
+    <link rel="stylesheet" type="text/css" href="../_static/styles/furo.css?v=7bdb33bb" />
     <link rel="stylesheet" type="text/css" href="../_static/copybutton.css?v=76b2166b" />
     <link rel="stylesheet" type="text/css" href="../_static/sg_gallery.css?v=d2d258e8" />
     <link rel="stylesheet" type="text/css" href="../_static/sg_gallery-binder.css?v=f4aeca0c" />
@@ -876,32 +876,32 @@
 <p class="breathe-sectiondef-title rubric" id="breathe-section-title-friends">Friends</p>
 <dl>
 <dt class="sig sig-object cpp">
-<em class="property"><span class="pre">friend</span> <span class="pre">class</span></em> <span class="pre">APyCFixed</span></dt>
+<span class="property"><span class="pre">friend</span> <span class="pre">class</span></span> <span class="pre">APyCFixed</span></dt>
 </dl>
 
 <dl>
 <dt class="sig sig-object cpp">
-<em class="property"><span class="pre">friend</span> <span class="pre">class</span></em> <span class="pre">APyFixedArray</span></dt>
+<span class="property"><span class="pre">friend</span> <span class="pre">class</span></span> <span class="pre">APyFixedArray</span></dt>
 </dl>
 
 <dl>
 <dt class="sig sig-object cpp">
-<em class="property"><span class="pre">friend</span> <span class="pre">class</span></em> <span class="pre">APyCFixedArray</span></dt>
+<span class="property"><span class="pre">friend</span> <span class="pre">class</span></span> <span class="pre">APyCFixedArray</span></dt>
 </dl>
 
 <dl>
 <dt class="sig sig-object cpp">
-<em class="property"><span class="pre">friend</span> <span class="pre">class</span></em> <span class="pre">APyFloat</span></dt>
+<span class="property"><span class="pre">friend</span> <span class="pre">class</span></span> <span class="pre">APyFloat</span></dt>
 </dl>
 
 <dl>
 <dt class="sig sig-object cpp">
-<em class="property"><span class="pre">friend</span> <span class="pre">class</span></em> <span class="pre">APyCFloat</span></dt>
+<span class="property"><span class="pre">friend</span> <span class="pre">class</span></span> <span class="pre">APyCFloat</span></dt>
 </dl>
 
 <dl>
 <dt class="sig sig-object cpp">
-<em class="property"><span class="pre">friend</span> <span class="pre">class</span></em> <span class="pre">APyArray</span></dt>
+<span class="property"><span class="pre">friend</span> <span class="pre">class</span></span> <span class="pre">APyArray</span></dt>
 </dl>
 
 </div>
@@ -1087,8 +1087,8 @@
     </aside>
   </div>
 </div><script src="../_static/documentation_options.js?v=5929fcd5"></script>
-    <script src="../_static/doctools.js?v=9bcbadda"></script>
-    <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
+    <script src="../_static/doctools.js?v=fd6eb6e6"></script>
+    <script src="../_static/sphinx_highlight.js?v=6ffebe34"></script>
     <script src="../_static/scripts/furo.js?v=46bd48cc"></script>
     <script src="../_static/clipboard.min.js?v=a7894cd8"></script>
     <script src="../_static/copybutton.js?v=f281be69"></script>
