deploy: f0a37ff410e3642da5804bfc48778ab719735fbc

--- a/genindex.html
+++ b/genindex.html
@@ -1885,6 +1885,8 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.cumsum">(apytypes.APyFloatArray method)</a>
 </li>
         </ul></li>
+        <li><a href="api/third-party.html#apytypes.ThirdPartyArrayLibrary.CUPY">CUPY (apytypes.ThirdPartyArrayLibrary attribute)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
@@ -2038,6 +2040,8 @@
 </li>
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.flatten">(apytypes.APyFloatArray method)</a>
 </li>
+          <li><a href="api/arrayfunctions.html#apytypes.flatten">(in module apytypes)</a>
+</li>
         </ul></li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I0E19floating_point_cast12APyFloatDataRK12APyFloatDataRK12APyFloatSpecRK12APyFloatSpec16QuantizationMode19QNTZ_FUNC_SIGNATURE">floating_point_cast (C++ function)</a>
 </li>
@@ -2087,10 +2091,10 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct25FloatingPointInnerProductERK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationMode">FloatingPointInnerProduct::FloatingPointInnerProduct (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_b_bENK25FloatingPointInnerProduct13inner_productEvPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tENSt6size_tENSt6size_tE">FloatingPointInnerProduct::inner_product (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_b_bENK25FloatingPointInnerProduct13inner_productEvPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tENSt6size_tENSt6size_tE">FloatingPointInnerProduct::inner_product (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct11mul_generalE">FloatingPointInnerProduct::mul_general (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct9mul_shortE">FloatingPointInnerProduct::mul_short (C++ member)</a>
@@ -2435,6 +2439,8 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.JAM_UNBIASED">JAM_UNBIASED (apytypes.QuantizationMode attribute)</a>
 </li>
+        <li><a href="api/third-party.html#apytypes.ThirdPartyArrayLibrary.JAX">JAX (apytypes.ThirdPartyArrayLibrary attribute)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
@@ -2671,6 +2677,8 @@
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.OverflowMode.NUMERIC_STD">NUMERIC_STD (apytypes.OverflowMode attribute)</a>
 </li>
+        <li><a href="api/third-party.html#apytypes.ThirdPartyArrayLibrary.NUMPY">NUMPY (apytypes.ThirdPartyArrayLibrary attribute)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
@@ -2772,6 +2780,8 @@
         <li><a href="cpp_api/python_util.html#_CPPv4I_bE29python_sequence_extract_shapeNSt6vectorINSt6size_tEEERKN8nanobind8sequenceENSt11string_viewE">python_sequence_extract_shape (C++ function)</a>
 </li>
         <li><a href="cpp_api/python_util.html#_CPPv4IDpE20python_sequence_walkNSt6vectorIN8nanobind6objectEEERKN8nanobind8sequenceENSt11string_viewE">python_sequence_walk (C++ function)</a>
+</li>
+        <li><a href="api/third-party.html#apytypes.ThirdPartyArrayLibrary.PYTORCH">PYTORCH (apytypes.ThirdPartyArrayLibrary attribute)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -3201,6 +3211,8 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.T">(apytypes.APyFloatArray property)</a>
 </li>
         </ul></li>
+        <li><a href="api/third-party.html#apytypes.ThirdPartyArrayLibrary.TENSORFLOW">TENSORFLOW (apytypes.ThirdPartyArrayLibrary attribute)</a>
+</li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4IDpE15ThirdPartyArray">ThirdPartyArray (C++ type)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv422ThirdPartyArrayLibrary">ThirdPartyArrayLibrary (C++ enum)</a>
