deploy: de06475cf36dcbf8febcfc664423067eb7033709

--- a/genindex.html
+++ b/genindex.html
@@ -333,6 +333,8 @@
         </ul></li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I00E29_cast_no_quantize_no_overflowv25RANDOM_ACCESS_ITERATOR_IN25RANDOM_ACCESS_ITERATOR_IN26RANDOM_ACCESS_ITERATOR_OUT26RANDOM_ACCESS_ITERATOR_OUTj">_cast_no_quantize_no_overflow (C++ function)</a>, <a href="cpp_api/apyfixed_util.html#_CPPv4I00E29_cast_no_quantize_no_overflowv25RANDOM_ACCESS_ITERATOR_IN26RANDOM_ACCESS_ITERATOR_OUTNSt6size_tENSt6size_tENSt6size_tEj">[1]</a>
 </li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv414_division_coreR12APyFloatDataRK8APyFixedRK8APyFixedRNSt7int64_tERK5exp_tRKbRK12APyFloatSpecRK16QuantizationMode">_division_core (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv415_EXP_LIMIT_BITS">_EXP_LIMIT_BITS (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv416_EXP_T_SIZE_BITS">_EXP_T_SIZE_BITS (C++ member)</a>
@@ -348,6 +350,12 @@
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I000E27_floating_point_mul_generalv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN228RANDOM_ACCESS_ITERATOR_INOUTRK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationModeK5exp_tK5exp_tK5exp_t">_floating_point_mul_general (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I0000E25_floating_point_mul_shortv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN228RANDOM_ACCESS_ITERATOR_INOUTRK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationMode19QNTZ_FUNC_SIGNATUREKjK5exp_tK5exp_tK5exp_tK5man_tK5man_tK5man_tK5man_tKiK5man_tK7int64_t">_floating_point_mul_short (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv430_floating_point_quotient_innerRK12APyFloatDataRK12APyFloatDataR12APyFloatDataRK5exp_tRK5exp_tRK5exp_tRK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationMode">_floating_point_quotient_inner (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv443_floating_point_quotient_inner_array_scalarRK12APyFloatDataRK12APyFloatDataR12APyFloatDataRK5exp_tRK5exp_tRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationModeRKNSt7int64_tERK8APyFixed">_floating_point_quotient_inner_array_scalar (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv443_floating_point_quotient_inner_scalar_arrayRK12APyFloatDataRK12APyFloatDataR12APyFloatDataRK5exp_tRK5exp_tRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationModeRKNSt7int64_tERK8APyFixed">_floating_point_quotient_inner_scalar_array (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_b_NSt6size_tE_NSt6size_tE_NSt6size_tEE20_FloatingPointAddSub">_FloatingPointAddSub (C++ class)</a>
 </li>
@@ -421,12 +429,12 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl8dst_specE">_FloatingPointAddSubSameWl::dst_spec (C++ member)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl12FINAL_RES_LOE">_FloatingPointAddSubSameWl::FINAL_RES_LO (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl8MAN_MASKE">_FloatingPointAddSubSameWl::MAN_MASK (C++ member)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl10NORM_CONSTE">_FloatingPointAddSubSameWl::NORM_CONST (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK26_FloatingPointAddSubSameWlclEPK12APyFloatDataPK12APyFloatDataP12APyFloatData">_FloatingPointAddSubSameWl::operator() (C++ function)</a>
